// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovementSection should render the movement section for Airpax 1`] = `
<section
  className="task-list--movement-info-section"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-item"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Passenger
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            FORD
            , 
          </li>
          <li
            className="govuk-!-font-weight-regular"
          >
            Isaiah
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            Male
            , 
          </li>
          <li
            className="govuk-!-font-weight-regular"
          >
            13 May 1966
            , 
          </li>
          <li
            className="govuk-!-font-weight-regular"
          >
            GBR
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            1 checked bag
            , 
          </li>
          <li
            className="govuk-!-font-weight-regular"
          >
            1kg
             
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            Check-in Unknown
            , 
          </li>
          <li
            className="govuk-!-font-weight-regular"
          >
            seat Unknown
             
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Document
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            Unknown
             (
            GBR
            )
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            Valid from Unknown
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            Expires Unknown
          </li>
        </ul>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
        >
          <li
            className="govuk-!-font-weight-regular"
          >
            Issued by Unknown
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <h3
        className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
      >
        Booking
      </h3>
      <ul
        className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
      >
        <li
          className="govuk-!-font-weight-bold"
        >
          Unknown
        </li>
      </ul>
      <ul
        className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
      >
        <li
          className="govuk-!-font-weight-regular"
        >
          Unknown
        </li>
      </ul>
      <ul
        className="govuk-body-s govuk-list govuk-!-margin-bottom-0 secondary-text"
      >
        <li
          className="govuk-!-font-weight-regular"
        >
          Unknown
        </li>
      </ul>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <h3
        className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
      >
        Co-travellers
      </h3>
      <ul
        className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
      >
        <li
          className="govuk-!-font-weight-bold"
        >
          None
        </li>
      </ul>
      <h3
        className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
      >
        Route
      </h3>
      <ul
        className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
      >
        <li
          className="govuk-!-font-weight-regular"
        >
          <span>
            FRA
             
            →
             
          </span>
          <span>
            LHR
             
             
          </span>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`MovementSection should render the movement section for RoRo V2 1`] = `
<section
  className="task-list--movement-info-section"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-item"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Driver details
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            Daniel Fagan
          </li>
          <li>
            DOB: 
            03/08/1984
          </li>
        </ul>
      </div>
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-top-3 govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Passenger details
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            1 passenger
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Vehicle details
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            GB57MJP
          </li>
          <li>
            Grey
          </li>
          <li>
            Scania
          </li>
          <li>
            R-Series
          </li>
        </ul>
      </div>
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text govuk-!-margin-top-3"
        >
          Trailer details
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            GB09NFD
          </li>
          <li>
            TR
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Haulier details
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            Sinkable Hauling
          </li>
        </ul>
      </div>
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text govuk-!-margin-top-3"
        >
          Account details
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            Safe Cafe Medical PPE
          </li>
          <br />
          <li>
            Booked on 
            02/08/2020
          </li>
          <br />
          <li>
            Booked 2 days before travel
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Goods description
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            PPE Masks
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;

exports[`MovementSection should render the movement section for a RoRo V2 foot passenger 1`] = `
<section
  className="task-list--movement-info-section"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-item"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Primary traveller
          <span
            className="govuk-visually-hidden"
          >
            <span
              className="govuk-!-margin-left-3 "
            >
              (
              -/-/-
              )
            </span>
          </span>
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            calauz geanina mihaela
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Document
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            Unknown
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Booking
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li>
            Booked on 
            30/12/2021
          </li>
          <br />
          <li>
            Booked 14 minutes before travel
          </li>
        </ul>
      </div>
    </div>
    <div
      className="govuk-grid-item vertical-dotted-line"
    >
      <div>
        <h3
          className="govuk-heading-s govuk-!-margin-bottom-1 govuk-!-font-size-16 govuk-!-font-weight-regular secondary-text"
        >
          Co-travellers
        </h3>
        <ul
          className="govuk-body-s govuk-list govuk-!-margin-bottom-0"
        >
          <li
            className="govuk-!-font-weight-bold"
          >
            None
          </li>
        </ul>
      </div>
    </div>
  </div>
</section>
`;
